<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/edit_patient"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/nameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/PatientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:layout_margin="8dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ageLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/Age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appointment"
        android:layout_margin="8dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <LinearLayout
        android:id="@+id/dateLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/DatePicker"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/TimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/_11_00_am"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MobileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/MobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="number"
            android:textColor="@android:color/black"/>


    </LinearLayout>

    <Button
        android:id="@+id/updatePatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/update" />

</LinearLayout>
