<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                style="@style/TextView"
                android:text="@string/welcome_dr"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp" />
            <TextView
                style="@style/TextView"
                android:id="@+id/tv"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <LinearLayout
                android:id="@+id/nameLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/PatientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patient_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ageLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/Age"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textAppearance="?android:textAppearanceMedium" />
                    <RadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium"/>

            <LinearLayout
                android:id="@+id/dateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">
                <EditText
                    android:id="@+id/DatePicker"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/dd_mm_yyyy"
                    android:focusable="false"
                    android:clickable="true"
                    android:textColor="@android:color/black"/>
                <EditText
                    android:id="@+id/TimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/_11_00_am"
                    android:focusable="false"
                    android:clickable="true"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/EmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/MobileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/MobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textColor="@android:color/black"/>

            </LinearLayout>



            <CheckBox
                android:id="@+id/consulting_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_is_my_first_consultation"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:id="@+id/Book_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/book_an_appointment" />


        </LinearLayout>

    </LinearLayout>





</ScrollView>
